Final version of combined potentials

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,6 +63,7 @@ set(SOURCES
         src/markovModels/markovModel.cpp
         src/markovModels/msmrdMarkovModel.cpp
         src/potentials/bistable.cpp
+        src/potentials/combinedPotentials.cpp
         src/potentials/dipole.cpp
         src/potentials/gaussians3D.cpp
         src/potentials/gayBerne.cpp
@@ -134,6 +135,7 @@ set(PY_SOURCES
         include/markovModels/msmrdMarkovModel.hpp
         include/potentials/potentials.hpp
         include/potentials/bistable.hpp
+        include/potentials/combinedPotentials.hpp
         include/potentials/dipole.hpp
         include/potentials/gaussians3D.hpp
         include/potentials/gayBerne.hpp
